Removed all compile errors from common